- Fixed bug #31060 (imageftbbox() does not use linespacing parameter)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@177267 c90b9560-bf6c-de11-be94-00142212c4b1